# axi_draft

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  units_config.json
.github/workflows/: build.yml  cmake.yml
dev/: dev_axi.cpp  dev_axi.h  dev_base.h  dev_gpio.h  dev_i2c.h  dev_sdram.h  dev_spi.h  mapper.cpp  mapper.h  xilinx_iic.h
devices/i2c/: ina21x.h
include/: common.h  drv_ioctls.h  utility.h
info/: info_base.h  info_gpio.h  info_gpio_parser.h  info_i2c.h  info_i2c_parser.h  info_sdram.h  info_sdram_parser.h  info_spi.h  info_spi_parser.h
tests/dev/: CMakeLists.txt  test_dev.cpp
tests/dev_axi/: CMakeLists.txt  test_dev_axi.cpp
tests/include/: test_info.h
tests/info/: CMakeLists.txt  test_info.cpp  units_config.json
units_dev/: CMakeLists.txt  test_dev_info.cpp  test_units_dev.cpp  units_dev.h  units_dev_base.h  units_dev_gpio.h  units_dev_i2c.h  units_dev_sdram.h  units_dev_spi.h
units_info/: CMakeLists.txt  test_units_info.cpp  test_units_info.h  units_config.ini  units_info.h  units_info_base.h  units_info_ddr.h  units_info_gpio.h  units_info_i2c.h  units_info_sdram.h  units_info_spi.h
